Restore xml.html with original content

--- a/xml.html
+++ b/xml.html
@@ -115,26 +115,26 @@
       <h3>Elementos</h3>
       <p>Las etiquetas envuelven el contenido:</p>
       <pre class="pretty">
-<nombre>Juan</nombre>
+&lt;nombre&gt;Juan&lt;/nombre&gt;
       </pre>
 
       <h3>Atributos</h3>
       <p>Describen propiedades dentro de una etiqueta:</p>
       <pre class="pretty">
-<persona edad="30">Juan</persona>
+&lt;persona edad="30"&gt;Juan&lt;/persona&gt;
       </pre>
 
       <h3>Documento XML completo</h3>
       <pre class="pretty">
-<?xml version="1.0" encoding="UTF-8"?>
-<persona>
-  <nombre>Juan</nombre>
-  <edad>30</edad>
-  <direccion>
-    <ciudad>Santo Domingo</ciudad>
-    <pais>República Dominicana</pais>
-  </direccion>
-</persona>
+&lt;?xml version="1.0" encoding="UTF-8"?&gt;
+&lt;persona&gt;
+  &lt;nombre&gt;Juan&lt;/nombre&gt;
+  &lt;edad&gt;30&lt;/edad&gt;
+  &lt;direccion&gt;
+    &lt;ciudad&gt;Santo Domingo&lt;/ciudad&gt;
+    &lt;pais&gt;República Dominicana&lt;/pais&gt;
+  &lt;/direccion&gt;
+&lt;/persona&gt;
       </pre>
     </section>
 
